kubernetes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: docker.io/library/django:1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
   app: django-app
  ports:
  - name: http
    port: 8089
    targetPort: 80
    protocol: TCP
